--- a/project/chat/templates/chat/chatroom.html
+++ b/project/chat/templates/chat/chatroom.html
@@ -22,7 +22,7 @@
         </div>
         <ul class="col-auto">
             <li><span class="to-username">{{to_user.username}}</span></li>
-            <li><span class="online-status">Online</span></li>
+            <li><span class="online-status">Offline</span></li>
         </ul>
     </div>
     <input type="hidden" name="room-name" id="room-name" value="{{room_name}}">
