--- a/project/mainpage/templates/index.html
+++ b/project/mainpage/templates/index.html
@@ -56,15 +56,15 @@
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                             <li class="scroll-to-section"><a href="#welcome" class="menu-item">Home</a></li>
-                            <li class="scroll-to-section"><a href=" " class="menu-item">ChatRoom</a></li>
-                            <li class="scroll-to-section"><a href=" " class="menu-item">FriendSearch</a>
+                            <li class="scroll-to-section"><a href="{% url 'chat' %} " class="">ChatRoom</a></li>
+                            <li class="scroll-to-section"><a href="{% url 'friendSearch' %} " class="">FriendSearch</a>
                             </li>
                             <li class="submenu">
                                 <a href="javascript:;">Account</a>
                                 <ul>
-                                    <li><a href="" class="menu-item">Sign up</a></li>
-                                    <li><a href="" class="menu-item">Account Setting</a></li>
-                                    <li><a href="" class="menu-item">Log in</a></li>
+                                    <li><a href="{% url 'register' %}" class="">Sign up</a></li>
+                                    <li><a href="{% url 'account_setting'}" class="">Account Setting</a></li>
+                                    <li><a href="{% url 'login' %}" class="">Log in</a></li>
 
                                 </ul>
                             </li>
