link siugup page to create account button

--- a/project/mainpage/templates/index.html
+++ b/project/mainpage/templates/index.html
@@ -93,7 +93,7 @@
                         data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
                         <h1>Meet your new friends here</h1>
                         <p>Make friends with other CUHKer</p>
-                        <a href=" " class="main-button-slider">CREATE ACCONT</a>
+                        <a href="{% url 'register' %}" class="main-button-slider">CREATE ACCONT</a>
                     </div>
                 </div>
             </div>
