--- a/project/friendSearch/templates/requests_list.html
+++ b/project/friendSearch/templates/requests_list.html
@@ -1,33 +1,11 @@
-{% extends 'base.html' %}
+{% extends 'friendSearch/base.html' %}
 
 {%block title%}
     Requestlist
 {%endblock title%}
 
 {% block content %}
-    <!--external css file-->
-    {%load static%}
-        <link rel="stylesheet" href={%static "css/design.css"%}>
-
-    
-    <header> <!--reference: bootstrap-->
-        <nav class="navbar navbar-expand-md navbar-secondary navbar-1 bg-secondary">            
-            <a href = '/'>
-            {%load static%}
-                <img src={% static "/images/icon.png"%} style="width:50px;height:50px;">         
-            </a>
-            <button class = "navbar-toggler" type="button" data-toggle="collapse" data-target="#lists" aria-expanded="false" aria-controls="lists" aria-label="Toggle navigation">
-                <span style="color: white">...</span>
-            </button>
-            <div class="collapse navbar-collapse ml-auto" id="lists">            
-                <a class="nav-item nav-link" href='/account/profile'>Profile</a>
-                <a class="nav-item nav-link" href='/friendSearch/request'>Request</a>
-                <a class="nav-item nav-link" href='/friendSearch/frdSearch'>Find Friend</a>
-                <a class="nav-item nav-link" href='/chat'>Chat</a>
-            </div>
-        </nav>
-    </header>
-    <body>      
+        
             {%if messages%}
                 {%for message in messages%}
                     {%if message.level == DEFAULT_MESSAGE_LEVELS.INFO %} <!--reference: the bootstrap-->
@@ -63,6 +41,5 @@
                     <p>There is no requests yet, you may wait other user or make a new search</p>
                 {%endif%}
         </div>
-    </body>
 
 {% endblock content %}
