--- a/project/friendSearch/templates/search_result.html
+++ b/project/friendSearch/templates/search_result.html
@@ -1,54 +1,66 @@
-{% extends 'base.html' %}
+{% extends 'friendSearch/base.html' %}
 
 {%block title%}
     Result of Search
 {%endblock title%}
 
 {% block content %}
-    {%load static%}
-        <link rel="stylesheet" href={%static "css/design.css"%}>
-    <header> <!--reference: bootstrap-->
-        <nav class="navbar navbar-expand-md navbar-secondary navbar-1 bg-secondary">            
-            <a href = '/'>
-            {%load static%}
-                <img src={% static "/images/icon.png"%} style="width:50px;height:50px;">         
-            </a>
-            <button class = "navbar-toggler" type="button" data-toggle="collapse" data-target="#lists" aria-expanded="false" aria-controls="lists" aria-label="Toggle navigation">
-                <span style="color: white">...</span>
-            </button>
-            <div class="collapse navbar-collapse ml-auto" id="lists">            
-                <a class="nav-item nav-link" href='/account/profile'>Profile</a>
-                <a class="nav-item nav-link" href='/friendSearch/request'>Request</a>
-                <a class="nav-item nav-link" href='/friendSearch/frdSearch'>Find Friend</a>
-                <a class="nav-item nav-link" href='/chat'>Chat</a>
+{% load static %}
+<div class="search-result-container d-flex flex-column" style="max-width: 576px; background-color: var(--middlepink);">
+    {% if frdlist %}
+    <span class="search-result-title">Here's our pick for you!</span>
+    <div id="carousel-container" class="carousel-container carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            {% for item in frdlist %}
+            {% if forloop.counter0 == 0 %}
+            <li data-target="#carousel-container" data-slide-to="{{forloop.counter0}}" class="active"></li>
+            {% else %}
+            <li data-target="#carousel-container" data-slide-to="{{forloop.counter0}}" class=""></li>
+            {% endif %}
+            {% endfor %}
+        </ol>
+        <div class="carousel-inner">
+            {% for item in frdlist %}
+            {% if forloop.counter0 == 0 %}
+            <div class="carousel-item active">
+                <img class="d-block" src="{% static 'images/default.jpg' %}" alt="{% static 'images/default.jpg' %}" width="300" height="300">
+                <div class="carousel-caption d-none d-md-block">
+                    <h2>{{item.username}}</h2>
+                </div>
             </div>
-        </nav>
-    </header>
-    
-    <body>                
-            <div class="container">
-            <h3>The recommanded friends list:</h3>
-                {%if frdlist %}
-                    <p>There is the list of recommanded friends</p>
-                    <p>Username:<p>
-                    {% for item in frdlist %}
-                        <div>
-                            <p>{{item.username}}</p>
-                        </div>
-                    {%endfor%}
-                    <p>Type valid friend from the list above, seperate with " ,"</p>
-                    <form method='post'>
-                        {% csrf_token %}
-                        {% for field in RequestForm %}
-                            <div>{{field}}</div>
-                        {% endfor %}
-                        <input type="Submit" class="btn btn-secondary" value="Send Request To Them" id="input">
-                    </form>
-                {%else%}
-                    <p>No results are founded, try again.</p>
-                {%endif%}
+            {% else %}
+            <div class="carousel-item">
+                <img class="d-block" src="{% static 'images/default.jpg' %}" alt="{% static 'images/default.jpg' %}" width="300" height="300">
+                <div class="carousel-caption d-none d-md-block">
+                    <h2>{{item.username}}</h2>
+                </div>
             </div>
-    </body>
+            {% endif %}
+            {% endfor %}
+        </div>
+        <a class="carousel-control-prev" href="#carousel-container" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carousel-container" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+    </div>
+    <div class="search-form-container mx-auto">
+        <span class="form-description" style="color: white;">Type valid friend from the list above, seperate with " ,"</span>
+        <form method='post'>
+            {% csrf_token %}
+            {% for field in RequestForm %}
+                <div>{{field}}</div>
+            {% endfor %}
+            <input type="Submit" class="btn btn-secondary mx-auto" value="Send Request To Them" id="input"></input>
+        </form>
+    </div>
+    {% else %}
+    <span class="no-result-text">Seems like we cannot find the exact match for you, try changing some of your criterias. </p>
+    {% endif %}
+</div>
 {% endblock content %}
 
 
