--- a/project/account/templates/base.html
+++ b/project/account/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,11 +12,70 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
 <body>
     {% block content %}
     {% endblock content %}
+
+    <!-- Bottom Navigation Bar -->
+    <div class="bottom-fixed-nav d-flex flex-row">
+        <a href="/" class="bottom-nav-items">
+            <img src="{% static 'images/icon.png' %}" alt="{% static 'images/icon.png' %}" width="40" height="40">
+        </a>
+        <a href="/chat/" class="bottom-nav-items d-flex flex-column" data-toggle="tooltip" data-placement="bottom" title="ChatRoom">
+            <span class="material-icons">chat</span>
+            <span class="support-text">ChatRoom</span>
+        </a>
+        <div class="bottom-nav-items friend-popup">
+            <ul class="friend-popup-list">
+                <li class="popup-item">
+                    <a href="/friendSearch/frdSearch/" class="popup-link  d-flex flex-column" >
+                        <span class="material-icons">favorite</span>
+                        <span class="support-text">Find Friends</span>
+                    </a>
+                </li>
+                <li class="popup-item">
+                    <a href="/friendSearch/request/" class="popup-link d-flex flex-column">
+                        <span class="material-icons">people_alt</span>
+                        <span class="support-text">Friend Requests</span>
+                    </a>
+                </li>
+            </ul>
+            <a href="#" class="d-flex flex-column friend-popup-toggler" data-toggle="tooltip" data-placement="bottom" title="FriendSearch">
+                <span class="material-icons">flash_on</span>
+                <span class="support-text">FriendSearch</span>
+            </a>
+        </div>
+        <div class="bottom-nav-items account-popup">
+            <ul class="account-popup-list">
+                <li class="popup-item">
+                    <a href="/account/profile/" class="popup-link d-flex flex-column">
+                        <span class="material-icons">favorite</span>
+                        <span class="support-text">Account Profile</span>
+                    </a>
+                </li>
+                <li class="popup-item">
+                    <a href="/account/profile_update/" class="popup-link d-flex flex-column">
+                        <span class="material-icons">people_alt</span>
+                        <span class="support-text">Profile Update</span>
+                    </a>
+                </li>
+                <li class="popup-item">
+                    <a href="/account/logout/" class="popup-link  d-flex flex-column">
+                        <span class="material-icons">people_alt</span>
+                        <span class="support-text">Logout</span>
+                    </a>
+                </li>
+            </ul>
+            <a href="#" class="d-flex flex-column account-popup-toggler" data-toggle="tooltip" data-placement="top" title="Account">
+                <span class="material-icons">account_circle</span>
+                <span class="support-text">Account</span>
+            </a>
+        </div>
+    </div>
 
     <!-- Bootstrap JavaScript -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -24,6 +84,96 @@
 </body>
 
 <style>
+    html{
+        --darkpink: #FD297B;
+        --middlepink: #FF5864;
+        --lightpink: #FF655B;
+        --verylightpink: #FAA1AF;
+        --palepink: #FACDD6;
+        --verypalepink: #FAE7EC;
+        --middlegrey: #424242;
+    }
+
+    /* Bottom Fixed Navigation Bar Style */
+    .bottom-fixed-nav{
+        box-shadow: 0 4px 8px 0 rgba(253, 41, 123, 0.2), 0 6px 20px 0 rgba(253, 41, 123, 0.19);
+        z-index: 100;
+        background-color: white;
+        height: 72px;
+        min-width: 250px;
+        border-radius: 40px;
+        border-style: none;
+        position: fixed;
+        bottom: 2vh;
+        left: 50%;
+        margin-left: -125px;
+        padding: 10px 10px;
+    }
+
+    .bottom-nav-items{
+        width: fit-content;
+        height: fit-content;
+        margin: auto;
+        text-decoration: none!important;
+        color: var(--darkpink);
+    }
+
+    .bottom-nav-items a{
+        text-decoration: none!important;
+        text-align: center;
+        margin: auto;
+    }
+
+
+    .bottom-nav-items .material-icons{
+        font-size: 40px;
+        color: var(--darkpink);
+        text-align: center;
+    }
+
+    .bottom-nav-items .support-text{
+        display: none;
+        font-size: 10px;
+        color: var(--middlegrey);
+    }
+
+    .bottom-nav-items.popup{
+        position: relative;
+        margin-bottom: 0;
+    }
+    
+    .account-popup-list, .friend-popup-list{
+        padding: 0;
+        height: 0;
+        overflow-y: hidden;
+        position: absolute;
+        display: block;
+        list-style: none;
+        margin: 0;
+        transition: 0.5s;
+        transition-delay: 0.2s;
+    }
+
+    .friend-popup:hover .friend-popup-list, .friend-popup-list:hover{
+        height: 90px;
+    }
+
+    .account-popup:hover .account-popup-list, .account-popup-list:hover{
+        height: 130px;
+    }
+
+    .account-popup .account-popup-list{
+        top: -120px;
+    }
+
+    .friend-popup .friend-popup-list{
+        top: -80px;
+    }
+
+    .popup-item .popup-link{
+        text-align: center;
+    }
+
     {% block style %}
     {% endblock style %}
 </style>
