--- a/project/account/templates/login.html
+++ b/project/account/templates/login.html
@@ -7,9 +7,9 @@ Login
 
 {% block content %}
 
-<div class="container">
-    <p class="text-center header">Login</p>
+<div class="container d-flex flex-column">
 
+    <span class="text-center title">Login</span>
     <form method="post">
         {% csrf_token %}
     
@@ -18,7 +18,7 @@ Login
                 {{field.label_tag}}
                 {{field}}
                 {% if field.help_text %}
-                    <div style="color: grey;">{{field.help_text}}</div>
+                    <div class="help-text" style="color: grey;">{{field.help_text}}</div>
                 {% endif %}
             </div>
         {% endfor %}
@@ -34,17 +34,35 @@ Login
         {% endif %}
     
         <input type="hidden" name="next" value="{{request.GET.next}}">
-        <button type="submit" class="btn btn-primary">Login</button>
+        <button type="submit" class="btn btn-secondary">Login</button>
     </form>
 </div>
 
 {% endblock content %}
 
 {% block style %}
-    .header {
-        font-size: 25px;
-    }
     .help-text {
         font-size: 15px;
+    }
+    .container {
+        box-shadow: 0 4px 8px 0 rgba(253, 41, 123, 0.2), 0 6px 20px 0 rgba(253, 41, 123, 0.19);
+        margin-top: 5vh;
+        padding: 10px 25px 25px 25px;
+        width: 70vw;
+        min-width: 300px;
+        max-width: 997px;
+        height: fit-content;
+        border-radius: 30px;
+        border-style: none;
+        background-color: white;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .title {
+        margin-top: 15px;
+        margin-bottom: 15px;
+        font-size: 20px;
+        font-weight: bold;
+        color: black;
     }
 {% endblock style %}
