--- a/project/account/templates/profile.html
+++ b/project/account/templates/profile.html
@@ -37,6 +37,9 @@ Profile
     }
     .greeting-message {
         margin-bottom: 15px;
+        font-size: 20px;
+        font-weight: bold;
+        color: black;
     }
     .profile > p {
         margin-top: 15px;
