--- a/project/account/templates/profile_update.html
+++ b/project/account/templates/profile_update.html
@@ -6,9 +6,8 @@ Update Profile
 
 {% block content %}
 
-<div class="container">
-    <p class="text-center header">Edit Profile</p>
-
+<div class="container d-flex flex-column">
+    <span class="text-center title">Edit Profile</span>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
     
@@ -17,7 +16,7 @@ Update Profile
                 {{field.label_tag}}
                 {{field}}
                 {% if field.help_text %}
-                    <div style="color: grey;">({{field.help_text}})</div>
+                    <div class="help-text" style="color: grey;">({{field.help_text}})</div>
                 {% endif %}
             </div>
         {% endfor %}
@@ -40,10 +39,28 @@ Update Profile
 {% endblock content %}
 
 {% block style %}
-    .header {
-        font-size: 25px;
-    }
     .help-text {
-        font-size: 15px;
+        font-size: 12px;
+    }
+    .container {
+        box-shadow: 0 4px 8px 0 rgba(253, 41, 123, 0.2), 0 6px 20px 0 rgba(253, 41, 123, 0.19);
+        margin-top: 5vh;
+        padding: 10px 25px 25px 25px;
+        width: 70vw;
+        min-width: 300px;
+        max-width: 997px;
+        height: fit-content;
+        border-radius: 30px;
+        border-style: none;
+        background-color: white;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .title {
+        margin-top: 15px;
+        margin-bottom: 15px;
+        font-size: 20px;
+        font-weight: bold;
+        color: black;
     }
 {% endblock style %}
