Edit width of Account templates

--- a/project/account/templates/profile_update.html
+++ b/project/account/templates/profile_update.html
@@ -46,9 +46,8 @@ Update Profile
         box-shadow: 0 4px 8px 0 rgba(253, 41, 123, 0.2), 0 6px 20px 0 rgba(253, 41, 123, 0.19);
         margin-top: 5vh;
         padding: 10px 25px 25px 25px;
-        width: 70vw;
+        width: 80vw
         min-width: 300px;
-        max-width: 997px;
         height: fit-content;
         border-radius: 30px;
         border-style: none;
