Updated bottom navbar icons for friendSearch pages

--- a/project/friendSearch/templates/friendSearch/base.html
+++ b/project/friendSearch/templates/friendSearch/base.html
@@ -29,13 +29,13 @@
         <div class="bottom-nav-items friend-popup">
             <ul class="friend-popup-list">
                 <li class="popup-item">
-                    <a href="/friendSearch/frdSearch/" class="popup-link  d-flex flex-column" >
+                    <a href="/friendSearch/frdSearch/" class="popup-link  d-flex flex-row" >
                         <span class="material-icons">favorite</span>
                         <span class="support-text">Find Friends</span>
                     </a>
                 </li>
                 <li class="popup-item">
-                    <a href="/friendSearch/request/" class="popup-link d-flex flex-column">
+                    <a href="/friendSearch/request/" class="popup-link d-flex flex-row">
                         <span class="material-icons">people_alt</span>
                         <span class="support-text">Friend Requests</span>
                     </a>
@@ -49,20 +49,20 @@
         <div class="bottom-nav-items account-popup">
             <ul class="account-popup-list">
                 <li class="popup-item">
-                    <a href="/account/profile/" class="popup-link d-flex flex-column">
-                        <span class="material-icons">favorite</span>
+                    <a href="/account/profile/" class="popup-link d-flex flex-row">
+                        <span class="material-icons">portrait</span>
                         <span class="support-text">Account Profile</span>
                     </a>
                 </li>
                 <li class="popup-item">
-                    <a href="/account/profile_update/" class="popup-link d-flex flex-column">
-                        <span class="material-icons">people_alt</span>
+                    <a href="/account/profile_update/" class="popup-link d-flex flex-row">
+                        <span class="material-icons">manage_accounts</span>
                         <span class="support-text">Profile Update</span>
                     </a>
                 </li>
                 <li class="popup-item">
-                    <a href="/account/logout/" class="popup-link  d-flex flex-column">
-                        <span class="material-icons">people_alt</span>
+                    <a href="/account/logout/" class="popup-link  d-flex flex-row">
+                        <span class="material-icons">logout</span>
                         <span class="support-text">Logout</span>
                     </a>
                 </li>
