--- a/project/friendSearch/templates/requests_list.html
+++ b/project/friendSearch/templates/requests_list.html
@@ -1,4 +1,6 @@
 {% extends 'friendSearch/base.html' %}
+{% load static %}
+
 
 {%block title%}
     Requestlist
@@ -22,24 +24,64 @@
                 {%endfor%}
             {%endif%}
 
-            <h2>The request list:</h2>
+            <div class="request-container d-flex flex-column"  style="max-width: 576px; background-color: var(--verylightpink);">
                 {%if requestlist %}
-                    {% for item in requestlist %}
-                        <div>
-                            <p>{{item.username}}</p>
+                <span class="request-title" style="color: black;">Here are the people who want to know you</span>
+                <div id="carousel-container" class="carousel-container carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        {% for item in requestlist %}
+                        {% if forloop.counter0 == 0 %}
+                        <li data-target="#carousel-container" data-slide-to="{{forloop.counter0}}" class="active"></li>
+                        {% else %}
+                        <li data-target="#carousel-container" data-slide-to="{{forloop.counter0}}" class=""></li>
+                        {% endif %}
+                        {% endfor %}
+                    </ol>
+                    <div class="carousel-inner">
+                        {% for item in requestlist %}
+                        {% if forloop.counter0 == 0 %}
+                        <div class="carousel-item active">
+                            <img class="d-block" src="{% static 'images/default.jpg' %}" alt="{% static 'images/default.jpg' %}" width="300" height="300">
+                            <div class="carousel-caption d-flex flex-column">
+                                <span class="username">{{item.username}}</span>
+                                <span class="user-description">Description goes here</span>
+                            </div>
                         </div>
-                    {%endfor%}
+                        {% else %}
+                        <div class="carousel-item">
+                            <img class="d-block" src="{% static 'images/default.jpg' %}" alt="{% static 'images/default.jpg' %}" width="300" height="300">
+                            <div class="carousel-caption d-flex flex-column">
+                                <span class="username">{{item.username}}</span>
+                                <span class="user-description">Description goes here</span>
+                            </div>
+                        </div>
+                        {% endif %}
+                        {% endfor %}
+                    </div>
+                    <a class="carousel-control-prev" href="#carousel-container" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                      </a>
+                      <a class="carousel-control-next" href="#carousel-container" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                      </a>
+                </div>
+                <div class="search-form-container mx-auto">
                     <p>Type valid friend from the list above, seperate with <b>", "</b></p>
                     <form method='post'>
                         {% csrf_token %}
                         {% for field in approvelist %}
                             <div>{{field}}</div>
                         {% endfor %}
-                        <input type="Submit" value="Type the username to accept it" id="input">
+                        <input type="Submit" value="Type the username to accept it" id="input" class="btn btn-secondary">
                     </form>
-                {%else%}
-                    <p>There is no requests yet, you may wait other user or make a new search</p>
-                {%endif%}
-        </div>
+                </div>
+                {% else %}
+                    <span class="no-request-text" style="color: black;">There is no requests yet, you may wait other user or make a new search</span>
+                {% endif %}
+            </div>
+
+
 
 {% endblock content %}
