--- a/project/friendSearch/templates/search_result.html
+++ b/project/friendSearch/templates/search_result.html
@@ -24,15 +24,17 @@
             {% if forloop.counter0 == 0 %}
             <div class="carousel-item active">
                 <img class="d-block" src="{% static 'images/default.jpg' %}" alt="{% static 'images/default.jpg' %}" width="300" height="300">
-                <div class="carousel-caption d-none d-md-block">
-                    <h2>{{item.username}}</h2>
+                <div class="carousel-caption d-flex flex-column">
+                    <span class="username">{{item.username}}</span>
+                    <span class="user-description">Description goes here</span>
                 </div>
             </div>
             {% else %}
             <div class="carousel-item">
                 <img class="d-block" src="{% static 'images/default.jpg' %}" alt="{% static 'images/default.jpg' %}" width="300" height="300">
-                <div class="carousel-caption d-none d-md-block">
-                    <h2>{{item.username}}</h2>
+                <div class="carousel-caption d-flex flex-column">
+                    <span class="username">{{item.username}}</span>
+                    <span class="user-description">Description goes here</span>
                 </div>
             </div>
             {% endif %}
