Added favicon.ico to mainpage, chat and friendSearch

--- a/project/friendSearch/templates/frd_searching.html
+++ b/project/friendSearch/templates/frd_searching.html
@@ -1,6 +1,6 @@
 {% extends 'friendSearch/base.html' %}
 {%block title%}
-    friendSearch
+    CUHKTinder - FriendSearch
 {% endblock%}
 
 {% block content %}
