--- a/project/friendSearch/templates/search_result.html
+++ b/project/friendSearch/templates/search_result.html
@@ -1,7 +1,7 @@
 {% extends 'friendSearch/base.html' %}
 
 {%block title%}
-    Result of Search
+CUHKTinder - FriendSearch
 {%endblock title%}
 
 {% block content %}
