--- a/project/mainpage/templates/index.html
+++ b/project/mainpage/templates/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="He Zhanbo">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>CUHK Tinder</title>
+    <title>CUHKTinder</title>
 
 
     <!-- Additional CSS Files -->
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href={% static "css/cuhktinder.css" %}>
 
     <link rel="stylesheet" href={% static "css/owl-carousel.css" %}>
+
+    <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
 
 </head>
 
@@ -48,7 +50,7 @@
 
                         <a href="index.html" class="logo">
                             <img src={% static "images/icon.png" %} alt="" style="width:50px;height:60px;">
-                            CUTinder
+                            CUHKTinder
 
                         </a>
 
