--- a/project/mainpage/templates/index.html
+++ b/project/mainpage/templates/index.html
@@ -48,7 +48,7 @@
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
 
-                        <a href="index.html" class="logo" style="font-size: 20px;">
+                        <a href="#welcome" class="logo" style="font-size: 20px;">
                             <img src={% static "images/icon.png" %} alt="" style="width:50px;height:60px;">
                             CUHKTinder
 
