--- a/project/friendSearch/templates/friendSearch/base.html
+++ b/project/friendSearch/templates/friendSearch/base.html
@@ -62,10 +62,17 @@
                     </a>
                 </li>
                 <li class="popup-item">
+                    {% if user.is_authenticated %}
                     <a href="/account/logout/" class="popup-link  d-flex flex-row">
                         <span class="material-icons">logout</span>
                         <span class="support-text">Logout</span>
                     </a>
+                    {% else %}
+                    <a href="/account/login/" class="popup-link  d-flex flex-row">
+                        <span class="material-icons">login</span>
+                        <span class="support-text">Login</span>
+                    </a>
+                    {% endif %}
                 </li>
             </ul>
             <a href="#" class="d-flex flex-column account-popup-toggler" data-toggle="tooltip" data-placement="top" title="Account">
