--- a/project/mainpage/templates/index.html
+++ b/project/mainpage/templates/index.html
@@ -64,10 +64,13 @@
                             <li class="submenu">
                                 <a href="javascript:;">Account</a>
                                 <ul>
+                                    {% if not user.is_authenticated %}
                                     <li><a href="{% url 'register' %}" class="">Sign up</a></li>
-                                    <li><a href="{% url 'profile_update' %}" class="">Account Setting</a></li>
                                     <li><a href="{% url 'login' %}" class="">Log in</a></li>
-
+                                    {% else %}
+                                    <li><a href="{% url 'profile_update' %}" class="">Account Setting</a></li>
+                                    <li><a href="{% url 'logout' %}" class="">Log out</a></li>
+                                    {% endif %}
                                 </ul>
                             </li>
                             <li class="scroll-to-section"><a href="#contact-us" class="menu-item">Contact Us</a></li>
